trivial change to README to make the gradle wrapper download clearer